<resources>
    <string name="app_name">NoteTaker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="textview_notes">Note:</string>
    <string name="textview_date_empty">-</string>
    <string name="textview_date">Date:</string>
    <string name="textview_title">Title:</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="textview_add_note">Add Note</string>
</resources>
