<RelativeLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".NoteEditActivity">

    <!-- Vertikálisan két sorban két további layoutot tartalmaz. -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!-- Szintúgy két layoutot tartalmaz, de ezúttal horizontálisan,
             figyelj a weight paraméterekre, az osztja ketté a sorokat.
             A layout_width="0dp" fontos, különben a szabály nem egyértelmű,
             bizonytalan mikor és melyiket veszi a layout rendszer figyelembe. -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Két primitív UI elemet tartalmaz. -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- A textAppearanceLarge jelzi azt, hogy nagy méretű
                     szöveges stílust töltünk be. Ettől eltekintve teljesen
                     sima stíluslap. -->
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <!-- A width fill_parent értéke érdekes, így tölti ki a
                     maradék teret. -->
                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_date"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_date_empty"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_notes"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Figyeld meg, ez már nem LinarLayout eleme, ez már
         a RelativeLayout-hoz tartozik. A layout_alignParentBottom
         és a layout_centerHorizontal segítenek a pozícionálásban. -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_save"/>

</RelativeLayout>